snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1.pom.md5
fd07b16f8de83936c7d02c25f6070b13